# cir-demo

./: .dockerignore  .gitignore  CONTRIBUTORS.md  README.md  build-static-binaries.sh  docker-compose.yml
xcfa-mapper/: CMakeLists.txt  README.md
xcfa-mapper/cmake/: GenerateVersion.cmake
xcfa-mapper/src/: ErrorMessages.h  Mapper.cpp  Mapper.h  Traceability.cpp  Traceability.h  VtableLayoutParser.cpp  VtableLayoutParser.h  main.cpp
xcfa-mapper/src/handlers/: Handlers.cpp  Handlers.h
xcfa-mapper/test/: README.md  benchmark_mapper.py  esbmc_cir_check.py  esbmc_inventory.py  expected.c  generate-reference-outputs.py  run-xcfa-mapper.sh  run_tests.sh  sample.mlir  va_start_probe.c  va_start_probe.mlir
xcfa-mapper/test/benchmark/esbmc_inventory_output/: report.csv  report.md
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__Method_qualifier1__Method_qualifier1/: input.mlir  output.c
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__algorithm8_operator___issue__algorithm8_operator___issue/: input.mlir  output.c
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__bicycle__bicycle/: input.mlir  output.c
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch10_1__ch10_1/: input.mlir  output.c
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch10_4__ch10_4/: input.mlir  output.c
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch11_1__ch11_1/: input.mlir  output.c  trace.json
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch11_2__ch11_2/: input.mlir  output.c
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch11_3__ch11_3/: input.mlir  output.c
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch11_4__ch11_4/: input.mlir  output.c
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_10__ch12_10/: input.mlir  output.c  trace.json
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_11__ch12_11/: input.mlir  output.c  trace.json
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_12__ch12_12/: input.mlir  output.c  trace.json
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_13__ch12_13/: input.mlir  output.c
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_14__ch12_14/: input.mlir  output.c  trace.json
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_15__ch12_15/: input.mlir  output.c  trace.json
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_16__ch12_16/: input.mlir  output.c  trace.json
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_17__ch12_17/: input.mlir  output.c  trace.json
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_18__ch12_18/: input.mlir  output.c
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_19__ch12_19/: input.mlir  output.c
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_1__ch12_1/: input.mlir  output.c  trace.json
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_2__ch12_2/: input.mlir  output.c
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_3__ch12_3/: input.mlir  output.c  trace.json
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_4__ch12_4/: input.mlir  output.c  trace.json
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_5__ch12_5/: input.mlir  output.c  trace.json
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_6__ch12_6/: input.mlir  output.c  trace.json
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_7__ch12_7/: input.mlir  output.c
xcfa-mapper/test/benchmark/esbmc_inventory_output/artifacts/cpp__ch12_8__ch12_8/: input.mlir  (+1 more)
xcfa-mapper/test/benchmark/esbmc_inventory_output_inheritance_algorithm/: report.csv  report.json  report.md
xcfa-mapper/test/integration/input/: test_arithmetic.c  test_arrays.c  test_basic.c  test_block_arg.c  test_bools.c  test_casts.c  test_comparisons.c  test_compound.c  test_control_flow.c  test_eh_called_throw.cpp  test_eh_multiple_fns.cpp  test_eh_raii_throw.cpp  test_floats.c  test_floats_2.c  test_functions.c  test_globals.c  test_integer_promotion.c  test_nested_arrays.c  test_nf_for.c  test_nf_nested.c  test_nf_switch_fallthrough.c  test_nf_try.cpp  test_scope_early_return_dtor.cpp  test_scope_for_init.cpp  test_scope_if_init.cpp  test_scope_nested_raii_loop.cpp  test_scope_plain_block.cpp  test_scope_raii.cpp  test_scope_stmt_expr.cpp  test_shifts.c  test_structs.c  test_swap_vector.cpp  test_unary.c  test_unsigned.c  test_virtual_dispatch.cpp  test_virtual_multi.cpp
xcfa-mapper/test/tmp/: llbmc_v_test.mlir  llbmc_v_test_best_effort.c
xcfa-mapper/test/unit/: test_alloca.mlir  test_binop.mlir  test_bitfield.mlir  test_block_args.mlir  test_call.mlir  test_cast.mlir  test_cast_2.mlir  test_cast_3.mlir  test_class.mlir  test_cmp.mlir  test_const.mlir  test_control_flow.mlir  test_fnptr_struct.mlir  test_fp_rounding.mlir  test_indirect_call.mlir  test_mapper_func_decl.mlir  test_memory_globals.mlir  test_misc_ops.mlir  test_nf_loops.mlir  test_nf_switch_struct.mlir  test_not.mlir  test_overflow.mlir  test_ptr_stride.mlir  test_types.mlir  test_unary.mlir  test_vacopy.mlir  test_varargs.mlir  test_virtual_dispatch.mlir
xcfa-mapper/test/unit/cpp/: test_array_field_basic.cpp  test_class.cpp  test_class_2.cpp  test_globals_basic.cpp  test_nested_struct.cpp  test_pointer_and_params.cpp  test_record_return_value.cpp  test_simple_struct.cpp  test_union_basic.cpp  test_virtual_func.cpp  test_virtual_func_inline.cpp  test_virtual_mi_diamond.cpp  test_virtual_mi_simple.cpp
xcfa-mapper/test/unit/cpp/todo/: SUPPORT_REQUIREMENTS.md  test_algorithm_includes.cpp  test_anonymous_union.cpp  test_bitfields.cpp  test_cv_ref.cpp  test_dynamic_cast_void_address.cpp  test_function_pointer_member.cpp  test_inheritance_virtual.cpp  test_multiple_inheritance_methods.cpp  test_unused_record_layout.cpp
(+13192 files in other folders)
